[package]
name = "rust_ws"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
rclrs = "0.4.1"
rosidl_runtime_rs = "0.4.1"
tokio = { version = "1.42.0", features = ["full"] }

## msgs
sensor_msgs = "*"
ackermann_msgs = "*"
nav_msgs = "*"


## --- F1Tenth Lab Section --- ###
[[bin]]
name = "lab3_wall_follwing"
path = "./src/lab_f1/lab3_wall_following.rs"


## --- F1Tenth Lab Section --- ###

